--- a/integration_test/Cargo.toml
+++ b/integration_test/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 bitcoincore-rpc = { path = "../client" }
-bitcoin = { version = "0.29.0", features = ["serde", "rand"]}
+bitcoin = { git = "https://github.com/XDeFi-tech/rust-bitcoin.git", branch = "xdefi-0.29.2", features = ["serde", "rand"]}
 lazy_static = "1.4.0"
 log = "0.4"
