--- a/json/Cargo.toml
+++ b/json/Cargo.toml
@@ -22,4 +22,4 @@ path = "src/lib.rs"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 
-bitcoin = { version = "0.29.0", features = ["serde"]}
+bitcoin = { git = "https://github.com/XDeFi-tech/rust-bitcoin.git", branch = "xdefi-0.29.2", features = ["serde"]}
